nocsonic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nosonic-web
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "nocsonic-gcloud-static-ip"
  labels:
    app: web-ng-hosted
spec:
  backend:
    serviceName: web-ng-frontend-svc
    servicePort: 5555
---
apiVersion: v1
kind: Service
metadata:
  name: web-ng-frontend-svc
  labels:
    app: web-ng-hosted
spec:
  type: NodePort
  selector:
    app: web-ng-hosted
    tier: web-frontend
  ports:
  - port: 5555
    targetPort: 5555
